src/test/deca/context/invalid/bad_assignment.deca
// Description:
//    int = float ;
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

{
	float x = 3.0;
    	int y = x;
}
